replaced width pixels with %, fixed masking issue with the header by using z-index.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 /** resetting default padding, margin and color for all elements **/
-*{text-decoration: none;list-style-type: none; padding: 0;margin: 0; //outline: red 1px solid;}
+*{text-decoration: none;list-style-type: none; padding: 0;margin: 0; outline: red 1px solid;}
 
 /** scroll smooth **/
 html{scroll-behavior: smooth;}
@@ -10,6 +10,10 @@ a{text-decoration: none; color: inherit;}
 /** import font **/
 .font-inter{font-family: 'Inter', sans-serif;}
 .font-montserrat{font-family: 'Montserrat', sans-serif;}
+
+/** positioning **/
+.position-relative{position: relative;}
+.position-absolute{position: absolute;}
 
 /** font weights **/
 .fw-bold{font-weight: 700;}
@@ -61,7 +65,7 @@ Body{background-color: #0A0A0A;}
 
 /** color bar **/
 .color-bar{
-    width: 310px;
+    width: 300px;
     height: 10px;
     border-radius: 100px;
     background: linear-gradient(90deg, #29C8AD, #4473C6);
@@ -70,8 +74,8 @@ Body{background-color: #0A0A0A;}
 }
 
 .color-ball{
-    width: 50px;
-    height: 50px;
+    width: 19%;
+    height: 14%;
     outline: #4AA495 3px solid;
     border-radius: 100%;
     background: linear-gradient(180deg, #29C8AD, #4473C6);
@@ -80,7 +84,7 @@ Body{background-color: #0A0A0A;}
 }
 
 .color-line{
-    width: 5px;
+    width: 1.5%;
     height: 380px;
     border-radius: 100px;
     background: linear-gradient(180deg, #29C8AD, #4473C6);
@@ -109,6 +113,7 @@ Body{background-color: #0A0A0A;}
 header{
     width: 100%;
     position: sticky;
+    z-index: 100;
     top: 0;
     height: 80px;
     border-bottom: 5px solid transparent;
@@ -173,12 +178,10 @@ ul{gap: 20px;padding: 0px 40px 0px 0px;}
     background-repeat: no-repeat;
 }
 
-.about-container{
-    width: auto;
-}
+.about-container{width: auto;}
 
 .about-me-txt{
-    width: 1200px;
+    width: 80%;
     margin-top: 10px;
 }
 
@@ -205,7 +208,7 @@ ul{gap: 20px;padding: 0px 40px 0px 0px;}
 .program-boxes{
     outline: #2D2D2D 2px solid;
     border-radius: 50px;
-    width: 400px;
+    width: 26%;
     height: 240px;
     margin-top: 80px;
 }
@@ -216,43 +219,43 @@ ul{gap: 20px;padding: 0px 40px 0px 0px;}
 /** section 4 styling my experience **/
 .my-experience{
     width: 100%;
-    height: 2000px;
+    height: 1600px;
     padding: 100px 0px 0px 0px;;
 }
 .experience-journey-box{width:100%;}
 .my-experience-box{width: auto; padding: 5px 50px 5px 50px;}
-.work-experience-boxes{width: auto; padding: 0px 0px 0px 0px;}
-.work-design{width: 310px;}
+.work-experience-boxes{width: auto;}
+.work-design{width: 20%;}
 .work-title{padding: 50px 0px 0px 0px;}
+.work-box-txt{width: auto;;}
 
 .work-boxes{
-    width: 1000px;
+    width: 78%;
     height: 400px;
     border-radius: 50px;
-    outline: #2D2D2D 2px solid;
-    
+    outline: #2D2D2D 2px solid;   
 }
 
-.work-boxes-placement{ padding: 0px 40px;}
+.work-boxes-placement{padding: 0px 40px;}
 .albron-work{margin-top: 20px;}
 
-.albron-title{width: 300px;}
-.albert-heijn-title{width: 320px;}
-.jumbo-title{width: 300px;}
+.albron-title{width: 75%;}
+.albert-heijn-title{width: 85%;}
+.jumbo-title{width: 68%;}
 
-.albron-work-txt{width: 300px; height: auto;}
-.work-box-txt{ padding: 30px 0px 0px 30px;}
-
-.work-image{overflow: hidden; border-top-right-radius: 50px; border-bottom-right-radius: 50px;}
+.work-txt{width: 68%; height: auto;}
+.work-box-txt{z-index: 1; width: 41%; padding: 30px 0px 0px 30px;}
+.work-year-txt{width: 32%;}
 
 .work-image{
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  -webkit-mask-image: linear-gradient(270deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0.12) 60%, rgba(0,0,0,0) 100%);
-  mask-image: linear-gradient(270deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0.12) 60%, rgba(0,0,0,0) 100%);
+    overflow: hidden;
+    border-top-right-radius: 50px;
+    border-bottom-right-radius: 50px;
+    mask-image: linear-gradient(270deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0.12) 60%, rgba(0,0,0,0) 100%);
 }
 
+/** section 5 styling projects **/
+.projects-placement{padding: 100px 40px;}
 
 /** Footer Style **/
 footer{
@@ -262,16 +265,10 @@ footer{
     border-image: linear-gradient(90deg, #29C8AD, #4473C6) 1;
 }
 
-.footer-box{
-    width: 100%;
-}
-
-.all-rights-reserved{
-    padding: 0px 0px 0px 40px;
-}
+.footer-box{width: 100%;}
+.all-rights-reserved{padding: 0px 0px 0px 40px;}
 
 .icons-social{
-    display: flex;
     gap: 40px;
     padding: 0px 40px 0px 0px;
 }
